# JABG

./: .gitignore  CMakeLists.txt  README.md  build.py  glad.c  jabg.out  ld.exe.stackdump  main.cpp  s=windows
include/glad/: glad.h
libraries/lib/: freetype.lib
libs/glad/: CMakeLists.txt  cmake_install.cmake  glad.c
libwin/lib/: zlibwapi.lib
res/DefaultShader/: DefaultShader.fs  DefaultShader.vs  DepthDebugView.vs  TextShader.fs  WaterShader.fs  WaterShader.vs
scripts/: make.sh  makewindows.sh
src/: CAABB.cpp  CAABB.h  CCamera.cpp  CCamera.h  CDebugLevel.cpp  CDebugLevel.h  CDirectionalLight.cpp  CDirectionalLight.h  CDisplay.cpp  CDrawableText.cpp  CDrawableText.h  CFileManager.cpp  CFileManager.h  CFrustumCollider.cpp  CFrustumCollider.h  CGame.cpp  CGame.h  CInputManager.cpp  CInputManager.h  CLevel.h  CMesh.cpp  CMesh.h  CObject.cpp  CObject.h  COctree.cpp  COctree.h  CPauseMenu.cpp  CPauseMenu.h  CRenderManager.cpp  CRenderManager.h  CShader.cpp  CShader.h  CSkyBox.cpp  CSkyBox.h  CSprite.h  CTexture.cpp  CTexture.h  main.cpp
src/BulkRenderer/: CBulkRenderer.cpp  CBulkRenderer.h
src/Engine/: CCamera.cpp  CCamera.h  CDisplay.cpp  CDisplay.h  CFileManager.h  CFrustumCollider.cpp  CGame.h  CInputManager.cpp  CInputManager.h  CLevel.h  CMesh.cpp  CMesh.h  CObject.cpp  CObject.h  CShader.h  CSprite.cpp  CSprite.h  CTexture.cpp  CTexture.h  CTextureAtlas.cpp  CTextureAtlas.h
src/Engine/GLRenderer/: CCamera.cpp  CCamera.h  CDisplay.h  CMesh.cpp  CMesh.h  CShader.cpp  CSprite.cpp  CSprite.h
src/Engine/Objects/: CObject.cpp  CObject.h
src/Engine/TextRenderer/: CDrawableText.cpp  CDrawableText.h
src/Engine/Utils/: Utils.cpp  Utils.h
src/Game/: CBlock.cpp  CBlock.h  CChunk.cpp  CChunk.h  CChunkCollider.cpp  CChunkCollider.h  CChunkManager.cpp  CChunkManager.h  CChunkMeshThreadManager.cpp  CChunkMeshThreadManager.h  CChunkPart.cpp  CChunkPart.h  CGameEntityCollider.cpp  CGameEntityCollider.h  CStructure.h  CStructureTree.cpp  CStructureTree.h  CTerrainGenerator.cpp  CTerrainGenerator.h  CWorld.cpp  CWorld.h  GameImportantStuff.h
src/Game/Chunk/: CChunk.cpp  CChunk.h  CChunkPart.cpp  CChunkPart.h  CLightHeightMap.cpp  CLightHeightMap.h
src/Game/ChunkComponents/: CChunkMeshComponent.cpp  CChunkMeshComponent.h  CChunkSaveComponent.cpp  CChunkSaveComponent.h  CChunkVoxelComponent.cpp  CChunkVoxelComponent.h  IChunkComponent.h
src/Game/ChunkLoader/: CChunkGenerator.cpp  (+5 more)
src/Misc/: CFPPlayer.cpp  CFPPlayer.h
win/: Makefile  cmake_install.cmake
(+57 files in other folders)
